--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,16 +12,27 @@ export(ae_table_grade_max)
 export(ae_table_grade_n)
 export(ae_table_soc)
 export(butterfly_plot)
+export(edc_swimmerplot)
+export(grstat_example)
+export(save_plotly)
+export(tibble)
+export(waterfall_plot)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_warn)
+importFrom(cli,col_green)
+importFrom(cli,col_red)
+importFrom(cli,qty)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,between)
 importFrom(dplyr,case_match)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
 importFrom(dplyr,cur_column)
 importFrom(dplyr,cur_group)
+importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
@@ -31,6 +42,7 @@ importFrom(dplyr,lead)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,n_distinct)
 importFrom(dplyr,na_if)
 importFrom(dplyr,pull)
 importFrom(dplyr,recode)
@@ -38,12 +50,15 @@ importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
+importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
 importFrom(forcats,as_factor)
 importFrom(forcats,fct_infreq)
 importFrom(forcats,fct_relevel)
 importFrom(forcats,fct_reorder)
+importFrom(fs,dir_create)
+importFrom(fs,path_dir)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_text)
@@ -52,13 +67,19 @@ importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_blank)
 importFrom(ggplot2,geom_col)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,position_dodge)
 importFrom(ggplot2,position_fill)
 importFrom(ggplot2,position_stack)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_fill_steps)
+importFrom(ggplot2,scale_shape_manual)
 importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,theme)
@@ -66,34 +87,55 @@ importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
 importFrom(ggplot2,waiver)
 importFrom(glue,glue)
+importFrom(labelled,var_label)
 importFrom(lifecycle,deprecate_warn)
-importFrom(magrittr,"%>%")
+importFrom(lifecycle,deprecated)
+importFrom(purrr,discard)
+importFrom(purrr,imap)
 importFrom(purrr,iwalk)
 importFrom(purrr,keep)
+importFrom(purrr,list_rbind)
 importFrom(purrr,map)
+importFrom(purrr,map2)
+importFrom(purrr,map_chr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
+importFrom(rlang,"%||%")
+importFrom(rlang,":=")
 importFrom(rlang,arg_match)
+importFrom(rlang,caller_arg)
 importFrom(rlang,check_dots_empty)
 importFrom(rlang,check_installed)
 importFrom(rlang,ensym)
 importFrom(rlang,int)
 importFrom(rlang,is_empty)
+importFrom(rlang,is_installed)
+importFrom(rlang,is_null)
 importFrom(rlang,set_names)
+importFrom(rlang,sym)
+importFrom(scales,breaks_width)
 importFrom(scales,label_percent)
 importFrom(stats,na.omit)
+importFrom(stats,rbinom)
+importFrom(stats,runif)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_ends)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_replace_all)
+importFrom(stringr,str_split)
 importFrom(stringr,str_starts)
+importFrom(stringr,str_to_lower)
 importFrom(tibble,as_tibble_col)
 importFrom(tibble,as_tibble_row)
 importFrom(tibble,deframe)
 importFrom(tibble,lst)
+importFrom(tibble,tibble)
 importFrom(tidyr,build_wider_spec)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,separate_wider_regex)
 importFrom(tidyr,unnest)
+importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
+importFrom(tidyselect,where)
