--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,6 @@ Imports:
     ggplot2,
     glue,
     lifecycle,
-    magrittr,
     purrr,
     rlang,
     scales,
@@ -35,7 +34,9 @@ Imports:
 Suggests: 
     crosstable,
     flextable,
-    patchwork
+    gtools,
+    patchwork,
+    plotly
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
