--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,18 +3,14 @@
 S3method(flextable::as_flextable,ae_table_soc)
 export("%>%")
 export(ae_plot_grade)
-export(ae_plot_grade_max)
 export(ae_plot_grade_n)
 export(ae_plot_grade_sum)
 export(ae_plot_soc)
 export(ae_table_grade)
-export(ae_table_grade_max)
-export(ae_table_grade_n)
 export(ae_table_soc)
 export(butterfly_plot)
-export(edc_swimmerplot)
+export(fct_yesno)
 export(grstat_example)
-export(save_plotly)
 export(tibble)
 export(waterfall_plot)
 importFrom(cli,cli_abort)
@@ -26,7 +22,6 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
-importFrom(dplyr,between)
 importFrom(dplyr,case_match)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
@@ -45,30 +40,25 @@ importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,na_if)
 importFrom(dplyr,pull)
-importFrom(dplyr,recode)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
-importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
 importFrom(forcats,as_factor)
 importFrom(forcats,fct_infreq)
 importFrom(forcats,fct_relevel)
 importFrom(forcats,fct_reorder)
-importFrom(fs,dir_create)
-importFrom(fs,path_dir)
+importFrom(forcats,fct_rev)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
-importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_blank)
 importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_hline)
-importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
@@ -76,25 +66,19 @@ importFrom(ggplot2,position_dodge)
 importFrom(ggplot2,position_fill)
 importFrom(ggplot2,position_stack)
 importFrom(ggplot2,scale_fill_manual)
-importFrom(ggplot2,scale_fill_steps)
 importFrom(ggplot2,scale_shape_manual)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_continuous)
-importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
-importFrom(ggplot2,waiver)
 importFrom(glue,glue)
-importFrom(labelled,var_label)
-importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
 importFrom(purrr,discard)
 importFrom(purrr,imap)
 importFrom(purrr,iwalk)
 importFrom(purrr,keep)
-importFrom(purrr,list_rbind)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_chr)
@@ -109,21 +93,18 @@ importFrom(rlang,check_installed)
 importFrom(rlang,ensym)
 importFrom(rlang,int)
 importFrom(rlang,is_empty)
-importFrom(rlang,is_installed)
 importFrom(rlang,is_null)
 importFrom(rlang,set_names)
-importFrom(rlang,sym)
 importFrom(scales,breaks_width)
 importFrom(scales,label_percent)
 importFrom(stats,na.omit)
 importFrom(stats,rbinom)
 importFrom(stats,runif)
 importFrom(stringr,str_detect)
-importFrom(stringr,str_ends)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_replace_all)
-importFrom(stringr,str_split)
 importFrom(stringr,str_starts)
+importFrom(stringr,str_subset)
 importFrom(stringr,str_to_lower)
 importFrom(tibble,as_tibble_col)
 importFrom(tibble,as_tibble_row)
@@ -138,4 +119,3 @@ importFrom(tidyr,separate_wider_regex)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
-importFrom(tidyselect,where)
