--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,12 @@ Authors@R:
              family = "Chaltiel",
              role = c("aut", "cre"),
              email = "dan.chaltiel@gustaveroussy.fr",
-             comment = c(ORCID = "0000-0003-3488-779X"))
+             comment = c(ORCID = "0000-0003-3488-779X")),
+      person(given = "Aldéric",
+             family = "Fraslin",
+             role = c("ctb"),
+             email = "alderic.fraslin@gustaveroussy.fr",
+             comment = c(ORCID = "0000-0003-2235-0012"))
     )
 Maintainer: Dan Chaltiel <dan.chaltiel@gustaveroussy.fr>
 Description: Gives tools to standardize the output of clinical research description.
