--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,11 @@ Authors@R:
              family = "Chaltiel",
              role = c("aut", "cre"),
              email = "dan.chaltiel@gustaveroussy.fr",
-             comment = c(ORCID = "0000-0003-3488-779X"))
+             comment = c(ORCID = "0000-0003-3488-779X")),
+            person(given = "Nusaïbah",
+             family = "Ibrahimi",
+             role = "ctb",
+             email = "nusaibah.ibrahimi@gustaveroussy.fr"))  
     )
 Maintainer: Dan Chaltiel <dan.chaltiel@gustaveroussy.fr>
 Description: Gives tools to standardize the output of clinical research description.
