--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,13 +19,17 @@ Authors@R:
       person(given = "Charlotte",
              family = "Bargain",
              role = c("ctb"),
-             email = "charlotte.bargain@gustaveroussy.fr")
+             email = "charlotte.bargain@gustaveroussy.fr"),
 
       person(given = "Aldéric",
              family = "Fraslin",
              role = c("ctb"),
              email = "alderic.fraslin@gustaveroussy.fr",
-             comment = c(ORCID = "0000-0003-2235-0012"))
+             comment = c(ORCID = "0000-0003-2235-0012")),
+      person(given = "Baptiste",
+             family = "Archambaud",
+             role = c("ctb"),
+             email = "baptiste.archambaud@gustaveroussy.fr")
     )
 Maintainer: Dan Chaltiel <dan.chaltiel@gustaveroussy.fr>
 Description: Gives tools to standardize the output of clinical research description.
