--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,39 +2,21 @@ Package: grstat
 Type: Package
 Title: Clinical Research Tools
 Version: 0.1.0.9003
-Authors@R: 
-    c(
-      person(given = "Dan",
-             family = "Chaltiel",
-             role = c("aut", "cre"),
+Authors@R: c(
+      person("Dan", "Chaltiel", role = c("aut", "cre"),
              email = "dan.chaltiel@gustaveroussy.fr",
              comment = c(ORCID = "0000-0003-3488-779X")),
-
-      person(given = "Nusaïbah",
-             family = "Ibrahimi",
-             role = "ctb",
-             email = "nusaibah.ibrahimi@gustaveroussy.fr"), 
-
-      person(given = "Charlotte",
-             family = "Bargain",
-             role = c("ctb"),
+      person("Baptiste", "Archambaud", role = c("ctb"),
+             email = "baptiste.archambaud@gustaveroussy.fr")
+      person("Charlotte", "Bargain", role = c("ctb"),
              email = "charlotte.bargain@gustaveroussy.fr"),
-             
-      person(given = "Livia",
-             family = "Pierotti",
-             role = c("ctb"),
-             email = "livia.pierotti@gustaveroussy.fr"),
-
-      person(given = "Aldéric",
-             family = "Fraslin",
-             role = c("ctb"),
+      person("Aldéric", "Fraslin", role = c("ctb"),
              email = "alderic.fraslin@gustaveroussy.fr",
              comment = c(ORCID = "0000-0003-2235-0012")),
-             
-      person(given = "Baptiste",
-             family = "Archambaud",
-             role = c("ctb"),
-             email = "baptiste.archambaud@gustaveroussy.fr")
+      person("Nusaïbah", "Ibrahimi", role = "ctb",
+             email = "nusaibah.ibrahimi@gustaveroussy.fr"), 
+      person("Livia", "Pierotti", role = c("ctb"),
+             email = "livia.pierotti@gustaveroussy.fr"),
     )
 Maintainer: Dan Chaltiel <dan.chaltiel@gustaveroussy.fr>
 Description: Gives tools to standardize the output of clinical research description.
