--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
              email = "dan.chaltiel@gustaveroussy.fr",
              comment = c(ORCID = "0000-0003-3488-779X")),
       person("Baptiste", "Archambaud", role = c("ctb"),
-             email = "baptiste.archambaud@gustaveroussy.fr")
+             email = "baptiste.archambaud@gustaveroussy.fr"),
       person("Charlotte", "Bargain", role = c("ctb"),
              email = "charlotte.bargain@gustaveroussy.fr"),
       person("Aldéric", "Fraslin", role = c("ctb"),
@@ -16,7 +16,7 @@ Authors@R: c(
       person("Nusaïbah", "Ibrahimi", role = "ctb",
              email = "nusaibah.ibrahimi@gustaveroussy.fr"), 
       person("Livia", "Pierotti", role = c("ctb"),
-             email = "livia.pierotti@gustaveroussy.fr"),
+             email = "livia.pierotti@gustaveroussy.fr")
     )
 Maintainer: Dan Chaltiel <dan.chaltiel@gustaveroussy.fr>
 Description: Gives tools to standardize the output of clinical research description.
@@ -40,12 +40,15 @@ Imports:
     tidyr,
     tidyselect
 Suggests: 
+    callr,
     crosstable,
     flextable,
     gtools,
     patchwork,
     plotly,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    usethis,
+    vdiffr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
