--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,13 @@ export(ae_plot_soc)
 export(ae_table_grade)
 export(ae_table_soc)
 export(butterfly_plot)
+export(edc_new_project)
 export(fct_yesno)
 export(grstat_example)
 export(tibble)
 export(waterfall_plot)
 importFrom(cli,cli_abort)
+importFrom(cli,cli_inform)
 importFrom(cli,cli_warn)
 importFrom(cli,col_green)
 importFrom(cli,col_red)
@@ -50,6 +52,13 @@ importFrom(forcats,fct_infreq)
 importFrom(forcats,fct_relevel)
 importFrom(forcats,fct_reorder)
 importFrom(forcats,fct_rev)
+importFrom(fs,dir_create)
+importFrom(fs,dir_ls)
+importFrom(fs,file_copy)
+importFrom(fs,is_dir)
+importFrom(fs,path)
+importFrom(fs,path_dir)
+importFrom(fs,path_package)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_text)
@@ -83,6 +92,7 @@ importFrom(purrr,map2)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
+importFrom(purrr,walk)
 importFrom(rlang,"%||%")
 importFrom(rlang,":=")
 importFrom(rlang,arg_match)
@@ -92,6 +102,7 @@ importFrom(rlang,check_installed)
 importFrom(rlang,ensym)
 importFrom(rlang,int)
 importFrom(rlang,is_empty)
+importFrom(rlang,is_installed)
 importFrom(rlang,is_null)
 importFrom(rlang,set_names)
 importFrom(scales,breaks_width)
@@ -99,8 +110,10 @@ importFrom(scales,label_percent)
 importFrom(stats,na.omit)
 importFrom(stats,rbinom)
 importFrom(stats,runif)
+importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
+importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_starts)
 importFrom(stringr,str_subset)
