change edc par grstat un peu partout

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,9 @@ export(ae_plot_soc)
 export(ae_table_grade)
 export(ae_table_soc)
 export(butterfly_plot)
-export(edc_new_project)
 export(fct_yesno)
 export(grstat_example)
+export(grstat_new_project)
 export(tibble)
 export(waterfall_plot)
 importFrom(cli,cli_abort)
