rename to `gr_new_project()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ export(ae_table_grade)
 export(ae_table_soc)
 export(butterfly_plot)
 export(fct_yesno)
+export(gr_new_project)
 export(grstat_example)
-export(grstat_new_project)
 export(tibble)
 export(waterfall_plot)
 importFrom(cli,cli_abort)
