--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,12 +16,15 @@ export(tibble)
 export(waterfall_plot)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_inform)
+importFrom(cli,cli_vec)
 importFrom(cli,cli_warn)
 importFrom(cli,col_green)
 importFrom(cli,col_red)
+importFrom(cli,format_inline)
 importFrom(cli,qty)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_match)
@@ -33,6 +36,7 @@ importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,if_else)
+importFrom(dplyr,intersect)
 importFrom(dplyr,lag)
 importFrom(dplyr,lead)
 importFrom(dplyr,left_join)
@@ -45,6 +49,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
+importFrom(dplyr,setequal)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
 importFrom(forcats,as_factor)
