--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,6 @@ importFrom(cli,format_inline)
 importFrom(cli,qty)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
-importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_match)
@@ -53,7 +52,17 @@ importFrom(dplyr,setdiff)
 importFrom(dplyr,setequal)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
+importFrom(flextable,align)
 importFrom(flextable,as_flextable)
+importFrom(flextable,bg)
+importFrom(flextable,bold)
+importFrom(flextable,flextable)
+importFrom(flextable,fontsize)
+importFrom(flextable,hline_bottom)
+importFrom(flextable,merge_h)
+importFrom(flextable,padding)
+importFrom(flextable,set_header_df)
+importFrom(flextable,set_table_properties)
 importFrom(forcats,as_factor)
 importFrom(forcats,fct_infreq)
 importFrom(forcats,fct_relevel)
