--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,8 +45,10 @@ Suggests:
     callr,
     crosstable,
     gtools,
+    knitr,
     patchwork,
     plotly,
+    rmarkdown,
     rstudioapi,
     testthat (>= 3.0.0),
     usethis,
@@ -56,3 +58,4 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
 Config/testthat/parallel: true
+VignetteBuilder: knitr
