--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importFrom(dplyr,cur_group)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,if_else)
 importFrom(dplyr,intersect)
 importFrom(dplyr,lag)
@@ -46,13 +47,16 @@ importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,na_if)
 importFrom(dplyr,pull)
+importFrom(dplyr,recode)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
+importFrom(dplyr,semi_join)
 importFrom(dplyr,setdiff)
 importFrom(dplyr,setequal)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
+importFrom(dplyr,ungroup)
 importFrom(flextable,as_flextable)
 importFrom(forcats,as_factor)
 importFrom(forcats,fct_infreq)
@@ -107,6 +111,7 @@ importFrom(rlang,caller_arg)
 importFrom(rlang,check_dots_empty)
 importFrom(rlang,check_installed)
 importFrom(rlang,ensym)
+importFrom(rlang,env)
 importFrom(rlang,int)
 importFrom(rlang,is_empty)
 importFrom(rlang,is_installed)
@@ -116,6 +121,7 @@ importFrom(scales,breaks_width)
 importFrom(scales,label_percent)
 importFrom(stats,na.omit)
 importFrom(stats,rbinom)
+importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
@@ -125,16 +131,20 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_starts)
 importFrom(stringr,str_subset)
 importFrom(stringr,str_to_lower)
+importFrom(tibble,as_tibble)
 importFrom(tibble,as_tibble_col)
 importFrom(tibble,as_tibble_row)
 importFrom(tibble,deframe)
 importFrom(tibble,lst)
 importFrom(tibble,tibble)
 importFrom(tidyr,build_wider_spec)
+importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,separate_wider_regex)
 importFrom(tidyr,unnest)
+importFrom(tidyselect,all_of)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
+importFrom(tidyselect,where)
