--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,11 @@ export(butterfly_plot)
 export(fct_yesno)
 export(gr_new_project)
 export(grstat_example)
+export(report_coxph)
 export(tibble)
 export(waterfall_plot)
+export(xx)
+importFrom(broom.helpers,tidy_plus_plus)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_inform)
 importFrom(cli,cli_vec)
@@ -144,6 +147,7 @@ importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,separate_wider_regex)
+importFrom(tidyr,unite)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
