--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,7 @@ importFrom(stringr,str_to_lower)
 importFrom(tibble,as_tibble_col)
 importFrom(tibble,as_tibble_row)
 importFrom(tibble,deframe)
+importFrom(tibble,enframe)
 importFrom(tibble,lst)
 importFrom(tibble,tibble)
 importFrom(tidyr,build_wider_spec)
@@ -145,5 +146,6 @@ importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,separate_wider_regex)
 importFrom(tidyr,unnest)
+importFrom(tidyr,unpack)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
