--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,na_if)
+importFrom(dplyr,pick)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
@@ -115,6 +116,7 @@ importFrom(rlang,arg_match)
 importFrom(rlang,caller_arg)
 importFrom(rlang,check_dots_empty)
 importFrom(rlang,check_installed)
+importFrom(rlang,current_env)
 importFrom(rlang,ensym)
 importFrom(rlang,int)
 importFrom(rlang,is_empty)
