--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as_flextable,ae_table_soc)
 export("%>%")
 export(ae_plot_grade)
 export(ae_plot_grade_n)
+export(ae_plot_grade_ridges)
 export(ae_plot_grade_sum)
 export(ae_plot_soc)
 export(ae_table_grade)
@@ -27,11 +28,13 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_match)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
 importFrom(dplyr,cur_column)
 importFrom(dplyr,cur_group)
+importFrom(dplyr,dense_rank)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
@@ -90,12 +93,14 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,position_dodge)
 importFrom(ggplot2,position_fill)
 importFrom(ggplot2,position_stack)
+importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_shape_manual)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
 importFrom(glue,glue)
@@ -106,6 +111,7 @@ importFrom(purrr,iwalk)
 importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,map2_dbl)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
@@ -148,6 +154,5 @@ importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,separate_wider_regex)
 importFrom(tidyr,unnest)
-importFrom(tidyr,unpack)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
