--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ importFrom(purrr,discard)
 importFrom(purrr,imap)
 importFrom(purrr,iwalk)
 importFrom(purrr,keep)
+importFrom(purrr,list_rbind)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_dbl)
