--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,12 +91,14 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,position_dodge)
 importFrom(ggplot2,position_fill)
 importFrom(ggplot2,position_stack)
+importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_shape_manual)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
 importFrom(glue,glue)
