--- a/.github/workflows/bump_dev_version.yaml
+++ b/.github/workflows/bump_dev_version.yaml
@@ -14,10 +14,12 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v4
+        with:
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+
     - name: Set up R
       uses: r-lib/actions/setup-r@v2
-      with:
-        install-r: false
+
     - name: Bump dev version
       uses: DanChaltiel/actions/bump-dev-version@v1
       with:
