--- a/.github/workflows/bump_dev_version.yaml
+++ b/.github/workflows/bump_dev_version.yaml
@@ -8,6 +8,7 @@ name: "Bump dev version"
 
 jobs:
   update_version:
+    if: "!contains(github.event.head_commit.message, 'Update dev version')"
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
