--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,11 +60,14 @@ importFrom(flextable,bg)
 importFrom(flextable,bold)
 importFrom(flextable,flextable)
 importFrom(flextable,fontsize)
+importFrom(flextable,hline)
 importFrom(flextable,hline_bottom)
 importFrom(flextable,merge_h)
+importFrom(flextable,merge_v)
 importFrom(flextable,padding)
 importFrom(flextable,set_header_df)
 importFrom(flextable,set_table_properties)
+importFrom(flextable,valign)
 importFrom(forcats,as_factor)
 importFrom(forcats,fct_infreq)
 importFrom(forcats,fct_relevel)
