check_lesion_number()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ae_table_grade)
 export(ae_table_soc)
 export(as_flextable)
 export(butterfly_plot)
+export(check_recist)
 export(gr_new_project)
 export(grstat_example)
 export(tibble)
@@ -157,6 +158,7 @@ importFrom(tibble,lst)
 importFrom(tibble,tibble)
 importFrom(tidyr,build_wider_spec)
 importFrom(tidyr,fill)
+importFrom(tidyr,nest)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
