--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(gr_recist_mapping)
 export(grstat_example)
 export(tibble)
 export(waterfall_plot)
+importFrom(cli,cat_rule)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_inform)
 importFrom(cli,cli_vec)
@@ -37,8 +38,8 @@ importFrom(dplyr,cur_group)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
+importFrom(dplyr,ends_with)
 importFrom(dplyr,filter)
-importFrom(dplyr,group_by)
 importFrom(dplyr,if_else)
 importFrom(dplyr,intersect)
 importFrom(dplyr,lag)
@@ -50,15 +51,13 @@ importFrom(dplyr,n_distinct)
 importFrom(dplyr,na_if)
 importFrom(dplyr,pick)
 importFrom(dplyr,pull)
-importFrom(dplyr,recode)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
-importFrom(dplyr,semi_join)
 importFrom(dplyr,setdiff)
+importFrom(dplyr,setequal)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
-importFrom(dplyr,ungroup)
 importFrom(flextable,align)
 importFrom(flextable,as_flextable)
 importFrom(flextable,bg)
@@ -85,6 +84,7 @@ importFrom(fs,is_dir)
 importFrom(fs,path)
 importFrom(fs,path_dir)
 importFrom(fs,path_ext)
+importFrom(fs,path_ext_remove)
 importFrom(fs,path_package)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
@@ -132,7 +132,7 @@ importFrom(rlang,check_dots_empty)
 importFrom(rlang,check_installed)
 importFrom(rlang,current_env)
 importFrom(rlang,ensym)
-importFrom(rlang,env)
+importFrom(rlang,has_name)
 importFrom(rlang,int)
 importFrom(rlang,is_empty)
 importFrom(rlang,is_installed)
@@ -142,7 +142,6 @@ importFrom(scales,breaks_width)
 importFrom(scales,label_percent)
 importFrom(stats,na.omit)
 importFrom(stats,rbinom)
-importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
@@ -160,8 +159,6 @@ importFrom(tibble,enframe)
 importFrom(tibble,lst)
 importFrom(tibble,tibble)
 importFrom(tidyr,build_wider_spec)
-importFrom(tidyr,fill)
-importFrom(tidyr,nest)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
@@ -170,4 +167,3 @@ importFrom(tidyr,unnest)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
-importFrom(tidyselect,where)
