--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(check_recist)
 export(gr_new_project)
 export(gr_recist_mapping)
 export(grstat_example)
+export(recist_report)
 export(tibble)
 export(waterfall_plot)
 importFrom(cli,cat_rule)
