Update du namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_match)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
@@ -48,6 +49,7 @@ importFrom(dplyr,pick)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
 importFrom(dplyr,summarise)
