--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,7 @@ importFrom(scales,breaks_width)
 importFrom(scales,label_percent)
 importFrom(stats,na.omit)
 importFrom(stats,rbinom)
+importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
