Modifications des ellipses pour pouvoir paramétrer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(gr_new_project)
 export(grstat_example)
 export(tibble)
 export(waterfall_plot)
+importFrom(base,do.call)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_inform)
 importFrom(cli,cli_vec)
