add randomisation_list ()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(as_flextable)
 export(butterfly_plot)
 export(gr_new_project)
 export(grstat_example)
+export(randomisation_list)
 export(tibble)
 export(waterfall_plot)
 importFrom(cli,cli_abort)
@@ -155,7 +156,9 @@ importFrom(tidyr,build_wider_spec)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
+importFrom(tidyr,separate)
 importFrom(tidyr,separate_wider_regex)
+importFrom(tidyr,unite)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
