recist_report: split into HTML and XLSX

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,8 @@ export(check_recist)
 export(gr_new_project)
 export(gr_recist_mapping)
 export(grstat_example)
-export(recist_report)
+export(recist_report_html)
+export(recist_report_xlsx)
 export(tibble)
 export(waterfall_plot)
 importFrom(cli,cat_rule)
