--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ae_table_grade)
 export(ae_table_soc)
 export(as_flextable)
 export(butterfly_plot)
+export(calc_best_response)
 export(gr_new_project)
 export(grstat_example)
 export(tibble)
