--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,8 @@ importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,position_dodge)
 importFrom(ggplot2,position_fill)
