--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(cli,format_inline)
 importFrom(cli,qty)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
@@ -34,7 +35,6 @@ importFrom(dplyr,count)
 importFrom(dplyr,cur_column)
 importFrom(dplyr,cur_group)
 importFrom(dplyr,dense_rank)
-importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,if_else)
@@ -53,6 +53,7 @@ importFrom(dplyr,rename_with)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
+importFrom(dplyr,slice_min)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
 importFrom(flextable,align)
