fixes for check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ importFrom(rlang,"%||%")
 importFrom(rlang,":=")
 importFrom(rlang,arg_match)
 importFrom(rlang,caller_arg)
+importFrom(rlang,caller_call)
 importFrom(rlang,check_dots_empty)
 importFrom(rlang,check_installed)
 importFrom(rlang,current_env)
