--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(ae_table_soc)
 export(as_flextable)
 export(butterfly_plot)
 export(gr_new_project)
+export(gr_officer_template)
 export(grstat_example)
 export(tibble)
 export(waterfall_plot)
