--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,10 +56,18 @@ importFrom(dplyr,setdiff)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
 importFrom(flextable,align)
+importFrom(flextable,as_chunk)
 importFrom(flextable,as_flextable)
+importFrom(flextable,as_paragraph)
 importFrom(flextable,bg)
+importFrom(flextable,body_replace_flextable_at_bkm)
 importFrom(flextable,bold)
+importFrom(flextable,border_inner_v)
+importFrom(flextable,border_outer)
+importFrom(flextable,compose)
+importFrom(flextable,delete_part)
 importFrom(flextable,flextable)
+importFrom(flextable,font)
 importFrom(flextable,fontsize)
 importFrom(flextable,hline)
 importFrom(flextable,hline_bottom)
@@ -69,6 +77,7 @@ importFrom(flextable,padding)
 importFrom(flextable,set_header_df)
 importFrom(flextable,set_table_properties)
 importFrom(flextable,valign)
+importFrom(flextable,width)
 importFrom(forcats,as_factor)
 importFrom(forcats,fct_infreq)
 importFrom(forcats,fct_relevel)
@@ -157,6 +166,7 @@ importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,separate_wider_regex)
+importFrom(tidyr,unite)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
