--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ae_plot_soc)
 export(ae_table_grade)
 export(ae_table_soc)
 export(as_flextable)
+export(boin_plot)
 export(butterfly_plot)
 export(gr_new_project)
 export(grstat_example)
@@ -26,6 +27,7 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_match)
 importFrom(dplyr,case_when)
@@ -39,6 +41,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,if_else)
 importFrom(dplyr,intersect)
 importFrom(dplyr,lag)
+importFrom(dplyr,last)
 importFrom(dplyr,lead)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
@@ -50,6 +53,7 @@ importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,row_number)
+importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
 importFrom(dplyr,summarise)
@@ -81,6 +85,7 @@ importFrom(fs,path)
 importFrom(fs,path_dir)
 importFrom(fs,path_package)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
@@ -88,7 +93,12 @@ importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_blank)
 importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_label)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,position_dodge)
@@ -117,6 +127,7 @@ importFrom(purrr,map2_dbl)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
+importFrom(purrr,pmap_chr)
 importFrom(purrr,walk)
 importFrom(rlang,"%||%")
 importFrom(rlang,":=")
@@ -145,6 +156,7 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_starts)
 importFrom(stringr,str_subset)
 importFrom(stringr,str_to_lower)
+importFrom(stringr,str_wrap)
 importFrom(tibble,as_tibble_col)
 importFrom(tibble,as_tibble_row)
 importFrom(tibble,deframe)
@@ -155,6 +167,7 @@ importFrom(tidyr,build_wider_spec)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
+importFrom(tidyr,separate_rows)
 importFrom(tidyr,separate_wider_regex)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,everything)
