--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -28,7 +28,9 @@ reference:
     - gr_new_project
     - grstat_example
 
-  - title: "Work in progress"
+  - title: "Not validated yet"
+  - description: "These functions should be used with caution, and results should always be checked using your own code in parallel."
   - contents:
     - ae_plot_grade_sum
+    - boin_plot
     - waterfall_plot
