--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ importFrom(fs,path_package)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
