--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ importFrom(purrr,keep)
 importFrom(purrr,list_rbind)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,map2_chr)
 importFrom(purrr,map2_dbl)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_int)
