--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -18,9 +18,16 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: windows-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: windows-latest,   r: 'release'}
-          - {os: windows-latest,   r: 'oldrel-1'}
+          - {os: windows-latest,  r: 'release', run_on: 'always'}
+          - {os: ubuntu-latest,   r: 'release', run_on: 'push'}
+          - {os: ubuntu-latest,  r: 'oldrel-1', run_on: 'push'}
+          - {os: ubuntu-latest,  r: 'devel', http-user-agent: 'release', run_on: 'push'}
+
+    if: |
+      github.event_name == 'workflow_dispatch' ||
+      github.event_name == 'push' ||
+      matrix.config.run_on == 'always'
+
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
