--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -32,7 +32,8 @@ reference:
   - contents:
     - check_recist
     - gr_recist_mapping
-    - recist_report
+    - recist_report_html
+    - recist_report_xlsx
 
   - title: "Not validated yet"
   - description: "These functions should be used with caution, and results should always be checked using your own code in parallel."
