Implémenter les checks RECIST (#63)
* WIP

* recist_check: .add_to_recist_issues() instead of warn

use an environment to centralize the issues instead of warning for each.
+ heavy reformat (should have made 2 commits...)

* recist_check reorder

* check_recist: .apply_recist_mapping()

* check_lesion_number()

* fixed .apply_recist_mapping

* check_constancy

* check_baseline_lesions

* hotfix: add rtn objects

* check_constancy: Response should be constant per date

* check_baseline_lesions: baseline response should be missing

* check_derived_columns

* check_lesion_number() becomes check_target_lesions()

* check_missing

* check_target_response

* fix check_missing

* check_constancy: add nontarget_yn

* check_target_response (for real)

* check_global_response

* .summarise_recist (for rc_short)

* move utils to utils.R

* check_global_response: fix arguments

* .apply_recist_mapping: add mandatory variables

* recist_issue: allow newline in message

* backup commit

* remove old code

OLD_check_bare_recist
OLD_check_response
FIX_check_crf_structure

* check_nontarget_response

Patients with no Non-Target Lesions should not have a NTL response.

* check_global_response: check NTL progressions

Progressions due only to Non-Target Lesions are seldom and should be checked

* remove legacy code

* print.check_recist

* remove unused grstat_env

* gr_recist_mapping: remove unused variables

* print.check_recist : nicer

* document

* check_recist: add mapping as attribute

* rephrase most issue messages

* recist_report() !!!

* autoimport

* check_derived_columns: conditional checks

* improve documentation

* Update _pkgdown.yml

* recist_report: add title parameter

* Delete test-recist.R

* add globalVariables

* fix for check

* check_derived_columns: deduplicate checks

* check_global_response: fix nlt-only progressions

* template recist: improve options

remove rownames, remove research

* add assert_extension()

* recist_report: split into HTML and XLSX

*

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,12 +51,14 @@ Suggests:
     ggsurvfit,
     gtools,
     knitr,
+    openxlsx,
     plotly,
     rmarkdown,
     rstudioapi,
     survival,
     testthat (>= 3.0.0),
     usethis,
+    utils,
     vdiffr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
