Squashed commit of the following:
commit a304e9217f9ec5fd0c952775d42e8dcdbd8a8371
Author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Date:   Fri Jul 11 16:58:20 2025 +0000

    Update dev version (Github Actions)

    Bump to v0.1.0.9014
    [skip ci]

commit 165566a73ffc74760e5d6a6729460cb9378484eb
Author: Dan Chaltiel <dan.chaltiel@gmail.com>
Date:   Fri Jul 11 18:56:53 2025 +0200

    new gr_officer_template() (#72)

    * new gr_officer_template()

    * doc

    * Update _pkgdown.yml

    * autoimport

    * fix for check

    * update globals

    ---------

    Co-authored-by: Dan Chaltiel <15105152+DanChaltiel@users.noreply.github.com>

commit 63d0d15d86d99b6aab2a06dab9d9dc201f04ba61
Author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Date:   Fri Jul 11 16:07:16 2025 +0000

    Update dev version (Github Actions)

    Bump to v0.1.0.9013
    [skip ci]

commit f95b3243391cfdcc9bbd809cc6de5ba5390752a2
Author: Dan Chaltiel <dan.chaltiel@gmail.com>
Date:   Fri Jul 11 18:06:07 2025 +0200

    Implémenter les checks RECIST (#63)

    * WIP

    * recist_check: .add_to_recist_issues() instead of warn

    use an environment to centralize the issues instead of warning for each.
    + heavy reformat (should have made 2 commits...)

    * recist_check reorder

    * check_recist: .apply_recist_mapping()

    * check_lesion_number()

    * fixed .apply_recist_mapping

    * check_constancy

    * check_baseline_lesions

    * hotfix: add rtn objects

    * check_constancy: Response should be constant per date

    * check_baseline_lesions: baseline response should be missing

    * check_derived_columns

    * check_lesion_number() becomes check_target_lesions()

    * check_missing

    * check_target_response

    * fix check_missing

    * check_constancy: add nontarget_yn

    * check_target_response (for real)

    * check_global_response

    * .summarise_recist (for rc_short)

    * move utils to utils.R

    * chec

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(butterfly_plot)
 export(calc_best_response)
 export(check_recist)
 export(gr_new_project)
+export(gr_officer_template)
 export(gr_recist_mapping)
 export(grstat_example)
 export(recist_report_html)
@@ -70,10 +71,18 @@ importFrom(dplyr,slice_min)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
 importFrom(flextable,align)
+importFrom(flextable,as_chunk)
 importFrom(flextable,as_flextable)
+importFrom(flextable,as_paragraph)
 importFrom(flextable,bg)
+importFrom(flextable,body_replace_flextable_at_bkm)
 importFrom(flextable,bold)
+importFrom(flextable,border_inner_v)
+importFrom(flextable,border_outer)
+importFrom(flextable,compose)
+importFrom(flextable,delete_part)
 importFrom(flextable,flextable)
+importFrom(flextable,font)
 importFrom(flextable,fontsize)
 importFrom(flextable,hline)
 importFrom(flextable,hline_bottom)
@@ -83,6 +92,7 @@ importFrom(flextable,padding)
 importFrom(flextable,set_header_df)
 importFrom(flextable,set_table_properties)
 importFrom(flextable,valign)
+importFrom(flextable,width)
 importFrom(forcats,as_factor)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_infreq)
@@ -190,6 +200,7 @@ importFrom(tidyr,pivot_wider_spec)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,separate_rows)
 importFrom(tidyr,separate_wider_regex)
+importFrom(tidyr,unite)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,everything)
