Waterfallplot: séparation calcul réponse / plot (#71)
* removed worst_resp calculation!

* isolate calc_best_response()

* add .remove_post_pd()

* improve/fix inner checks

* isolate .encode_response

* use slice_min instead of filter for better tie management

* output: select and rename

+clean
+add ellipsis argument

* grstat_data_warn default subjid

* doc

* waterfall: change interface

from raw recist to best response

* add .check_legacy()

error message to signal the function has changed

* add .get_shape_layer()

more versatile than stars

* add .get_fill_scale()

get fill colors from parameter "resp_colors"

* clean labs and theme

* doc

* autoimport

* add tests

* signal dev lifecycle

* grstat_dev_warn: add verbosity control for tests

* improve globalVariables management

* fixes for check

* grstat_dev_warn fix

* Squashed commit of the following:

commit 63d0d15d86d99b6aab2a06dab9d9dc201f04ba61
Author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Date:   Fri Jul 11 16:07:16 2025 +0000

    Update dev version (Github Actions)

    Bump to v0.1.0.9013
    [skip ci]

commit f95b3243391cfdcc9bbd809cc6de5ba5390752a2
Author: Dan Chaltiel <dan.chaltiel@gmail.com>
Date:   Fri Jul 11 18:06:07 2025 +0200

    Implémenter les checks RECIST (#63)

    * WIP

    * recist_check: .add_to_recist_issues() instead of warn

    use an environment to centralize the issues instead of warning for each.
    + heavy reformat (should have made 2 commits...)

    * recist_check reorder

    * check_recist: .apply_recist_mapping()

    * check_lesion_number()

    * fixed .apply_recist_mapping

    * check_constancy

    * check_baseline_lesions

    * hotfix: add rtn objects

    * check_constancy: Response should be constant per date

    * check_baseline_lesions: baseline response should be missing

    * check_derived_columns

    * check_lesion_number() becomes check_target_lesions()

    * check_missing

    * check_target_response

    * fix che

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(ae_table_soc)
 export(as_flextable)
 export(boin_plot)
 export(butterfly_plot)
+export(calc_best_response)
 export(check_recist)
 export(gr_new_project)
 export(gr_officer_template)
@@ -32,6 +33,7 @@ importFrom(cli,format_inline)
 importFrom(cli,qty)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
@@ -65,6 +67,7 @@ importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
 importFrom(dplyr,setequal)
+importFrom(dplyr,slice_min)
 importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
 importFrom(flextable,align)
@@ -122,6 +125,8 @@ importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,position_dodge)
 importFrom(ggplot2,position_fill)
