mise a jour de l'environnement avec la nouvelle fonction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(gr_new_project)
 export(grstat_example)
 export(tibble)
 export(waterfall_plot)
+importFrom(GenBinomApps,clopper.pearson.ci)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_inform)
 importFrom(cli,cli_vec)
@@ -56,10 +57,13 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,transmute)
 importFrom(flextable,align)
 importFrom(flextable,as_flextable)
+importFrom(flextable,as_paragraph)
 importFrom(flextable,bg)
 importFrom(flextable,bold)
+importFrom(flextable,delete_rows)
 importFrom(flextable,flextable)
 importFrom(flextable,fontsize)
+importFrom(flextable,footnote)
 importFrom(flextable,hline)
 importFrom(flextable,hline_bottom)
 importFrom(flextable,merge_h)
@@ -67,9 +71,9 @@ importFrom(flextable,merge_v)
 importFrom(flextable,padding)
 importFrom(flextable,set_header_df)
 importFrom(flextable,set_table_properties)
+importFrom(flextable,surround)
 importFrom(flextable,valign)
 importFrom(forcats,as_factor)
-importFrom(forcats,fct_drop)
 importFrom(forcats,fct_infreq)
 importFrom(forcats,fct_relevel)
 importFrom(forcats,fct_reorder)
@@ -107,6 +111,7 @@ importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
+importFrom(officer,fp_border)
 importFrom(purrr,discard)
 importFrom(purrr,imap)
 importFrom(purrr,iwalk)
