maj des test et exemples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(as_flextable)
 export(butterfly_plot)
 export(gr_new_project)
 export(grstat_example)
+export(survfit_stack)
 export(tibble)
 export(waterfall_plot)
 importFrom(GenBinomApps,clopper.pearson.ci)
@@ -25,6 +26,7 @@ importFrom(cli,format_inline)
 importFrom(cli,qty)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
@@ -74,6 +76,7 @@ importFrom(flextable,set_table_properties)
 importFrom(flextable,surround)
 importFrom(flextable,valign)
 importFrom(forcats,as_factor)
+importFrom(forcats,fct_drop)
 importFrom(forcats,fct_infreq)
 importFrom(forcats,fct_relevel)
 importFrom(forcats,fct_reorder)
@@ -135,6 +138,7 @@ importFrom(rlang,ensym)
 importFrom(rlang,int)
 importFrom(rlang,is_empty)
 importFrom(rlang,is_installed)
+importFrom(rlang,is_named)
 importFrom(rlang,is_null)
 importFrom(rlang,set_names)
 importFrom(scales,breaks_width)
