hard rework to get unseen grades

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -202,6 +202,7 @@ importFrom(tidyr,separate_rows)
 importFrom(tidyr,separate_wider_regex)
 importFrom(tidyr,unite)
 importFrom(tidyr,unnest)
+importFrom(tidyr,unpack)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
