Squashed commit of the following:
commit f220fb5fdb2517e424de01f171adcce19a986ceb
Author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Date:   Fri Jul 18 14:08:20 2025 +0000

    Update dev version (Github Actions)

    Bump to v0.1.0.9015
    [skip ci]

commit 972e13e3fb8b8de7c7d405577e28d977c05c920f
Author: Lpierott <pierotti.livia@gmail.com>
Date:   Fri Jul 18 16:06:01 2025 +0200

    Improve KaplanMeier vignette (#74)

    * Create kaplan_meier_v2.Rmd

    * remove v2 to the name of the rmd script

commit 6f326805b378cd14956c466f46029364773008b8
Author: Dan Chaltiel <dan.chaltiel@gmail.com>
Date:   Tue Jul 15 10:08:48 2025 +0200

    Delete .github/ISSUE_TEMPLATE directory

    [skip ci]

commit bf2d483da16ae4424929f698b24cdbde89d3a355
Author: Dan Chaltiel <dan.chaltiel@gmail.com>
Date:   Sat Jul 12 14:09:51 2025 +0200

    Waterfallplot: séparation calcul réponse / plot (#71)

    * removed worst_resp calculation!

    * isolate calc_best_response()

    * add .remove_post_pd()

    * improve/fix inner checks

    * isolate .encode_response

    * use slice_min instead of filter for better tie management

    * output: select and rename

    +clean
    +add ellipsis argument

    * grstat_data_warn default subjid

    * doc

    * waterfall: change interface

    from raw recist to best response

    * add .check_legacy()

    error message to signal the function has changed

    * add .get_shape_layer()

    more versatile than stars

    * add .get_fill_scale()

    get fill colors from parameter "resp_colors"

    * clean labs and theme

    * doc

    * autoimport

    * add tests

    * signal dev lifecycle

    * grstat_dev_warn: add verbosity control for tests

    * improve globalVariables management

    * fixes for check

    * grstat_dev_warn fix

    * Squashed commit of the following:

    commit 63d0d15d86d99b6aab2a06dab9d9dc201f04ba61
    Author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
    Date:   

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -26,9 +26,20 @@ reference:
   - title: "Utils"
   - contents:
     - gr_new_project
+    - gr_officer_template
     - grstat_example
 
-  - title: "Work in progress"
+  - title: "Checks"
+  - contents:
+    - check_recist
+    - gr_recist_mapping
+    - recist_report_html
+    - recist_report_xlsx
+
+  - title: "Not validated yet"
+  - description: "These functions should be used with caution, and results should always be checked using your own code in parallel."
   - contents:
     - ae_plot_grade_sum
+    - boin_plot
+    - calc_best_response
     - waterfall_plot
