--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: grstat
 Type: Package
 Title: Clinical Research Tools
-Version: 0.1.0.9010
+Version: 0.1.0.9015
 Authors@R: c(
       person("Team Oncostat", role = c("cph", "fnd"),
              comment = c(ROR = "01ed4t417")),
@@ -36,6 +36,7 @@ Imports:
     ggplot2,
     glue,
     lifecycle,
+    patchwork,
     purrr,
     rlang,
     scales,
@@ -44,18 +45,21 @@ Imports:
     tidyr,
     tidyselect
 Suggests: 
+    BOIN,
     callr,
     crosstable,
     ggsurvfit,
     gtools,
     knitr,
-    patchwork,
+    officer,
+    openxlsx,
     plotly,
     rmarkdown,
     rstudioapi,
     survival,
     testthat (>= 3.0.0),
     usethis,
+    utils,
     vdiffr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
