--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ae_plot_grade_n)
 export(ae_plot_grade_sum)
 export(ae_plot_soc)
 export(ae_table_grade)
+export(ae_table_grade_bak)
 export(ae_table_soc)
 export(as_flextable)
 export(boin_plot)
