--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ae_plot_soc)
 export(ae_table_grade)
 export(ae_table_soc)
 export(as_flextable)
+export(body_add_gr_sections_1_8)
 export(boin_plot)
 export(butterfly_plot)
 export(calc_best_response)
@@ -23,6 +24,7 @@ export(recist_report_xlsx)
 export(survfit_stack)
 export(tibble)
 export(waterfall_plot)
+importFrom(cli,boxx)
 importFrom(cli,cat_rule)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_inform)
@@ -32,6 +34,8 @@ importFrom(cli,col_green)
 importFrom(cli,col_red)
 importFrom(cli,format_inline)
 importFrom(cli,qty)
+importFrom(crosstable,body_add_normal)
+importFrom(crosstable,body_add_title)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
@@ -186,6 +190,7 @@ importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
+importFrom(stringr,str_split_1)
 importFrom(stringr,str_starts)
 importFrom(stringr,str_subset)
 importFrom(stringr,str_to_lower)
