EDCimport utils for referencing the project

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(recist_report_html)
 export(recist_report_xlsx)
 export(tibble)
 export(waterfall_plot)
+importFrom(EDCimport,edc_lookup)
 importFrom(cli,cat_rule)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_inform)
