new argument `check_recist(supp_cols_df)`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ importFrom(dplyr,pick)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
+importFrom(dplyr,right_join)
 importFrom(dplyr,row_number)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
