--- a/NAMESPACE
+++ b/NAMESPACE
@@ -173,6 +173,7 @@ importFrom(rlang,is_empty)
 importFrom(rlang,is_installed)
 importFrom(rlang,is_named)
 importFrom(rlang,is_null)
+importFrom(rlang,local_options)
 importFrom(rlang,set_names)
 importFrom(scales,breaks_width)
 importFrom(scales,label_percent)
